# graphics_labs

./: .clang-format  .gitignore
engine/: CMakeLists.txt  conanfile.py
engine/assets/shaders/default/: default.frag.glsl
engine/assets/shaders/test/: vert.glsl
engine/cmake/: labs_engine-config.cmake.in
engine/include/labs_engine/application/: application.h
engine/include/labs_engine/camera/: camera.h
engine/include/labs_engine/glad/: glad.h
engine/include/labs_engine/material/: material.h
engine/include/labs_engine/mesh/: mesh.h  objmesh.h
engine/include/labs_engine/object/: object.h  objmesh.h  render_object.h
engine/include/labs_engine/shaders/: shaders.h
engine/include/labs_engine/utils/: color.h  transform.h  types.h
engine/src/c++/: main.cc
engine/src/c++/application/: application.cc
engine/src/c++/camera/: camera.cc
engine/src/c++/glad/: glad.cc
engine/src/c++/material/: material.cc
engine/src/c++/mesh/: mesh.cc  objmesh.cc
engine/src/c++/object/: object.cc  objmesh.cc  render_object.cc
engine/src/c++/utils/: color.cc
engine/src/shaders/default/: default.frag.glsl  default.vert.glsl
engine/src/shaders/simple_texture/: simple_texture.frag.glsl  simple_texture.vert.glsl
engine/standalone/: CMakeLists.txt  cube.cc  cube.h  main.cc
lab1/: CMakeLists.txt  conanfile.py
lab1/assets/shaders/lit_untextured/: vert.glsl
lab1/src/c++/: cone.h  cube.cc  cube.h  main.cc
lab2/: CMakeLists.txt  conanfile.py
lab2/src/c++/: cone.cc  cube.h  sphere.cc  sphere.h
